--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -1,31 +1,48 @@
-# This workflow will do a clean installation of node dependencies, cache/restore them, build the source code and run tests across different versions of node
-# For more information see: https://docs.github.com/en/actions/automating-builds-and-tests/building-and-testing-nodejs
+# This workflow builds and deploys a React application to GitHub Pages.
+name: Deploy React App to GitHub Pages
 
-name: Node.js CI
-
+# Controls when the workflow will run
 on:
+  # Triggers the deployment on pushes to the 'main' branch
   push:
     branches: [ "main" ]
-  pull_request:
-    branches: [ "main" ]
 
+  # Allows you to run this workflow manually from the Actions tab
+  workflow_dispatch:
+
+# A workflow run is made up of one or more jobs
 jobs:
-  build:
-
+  build-and-deploy:
+    # The type of runner that the job will run on
     runs-on: ubuntu-latest
 
-    strategy:
-      matrix:
-        node-version: [18.x, 20.x, 22.x]
-        # See supported Node.js release schedule at https://nodejs.org/en/about/releases/
-
+    # Steps represent a sequence of tasks
     steps:
-    - uses: actions/checkout@v4
-    - name: Use Node.js ${{ matrix.node-version }}
-      uses: actions/setup-node@v4
-      with:
-        node-version: ${{ matrix.node-version }}
-        cache: 'npm'
-    - run: npm ci
-    - run: npm run build --if-present
-    - run: npm test
+      - name: Checkout Repository
+        uses: actions/checkout@v4
+
+      - name: Set up Node.js
+        uses: actions/setup-node@v4
+        with:
+          # Use the Node.js version you are developing with
+          node-version: '20' 
+          cache: 'npm' # Caches npm modules for faster builds
+
+      - name: Install Dependencies
+        run: npm install
+
+      - name: Build React App
+        # This command runs your standard production build script
+        run: npm run build 
+
+      - name: Deploy to GitHub Pages
+        uses: peaceiris/actions-gh-pages@v4
+        with:
+          # Token used for pushing to the gh-pages branch
+          github_token: ${{ secrets.GITHUB_TOKEN }}
+          # The branch where the static files will be pushed
+          publish_branch: gh-pages 
+          # The directory containing the static files (adjust if yours is 'dist')
+          publish_dir: ./build 
+          # Keep original commit messages
+          commit_message: ${{ github.event.head_commit.message }}
